--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <link rel="icon" type="image/x-icon" href="assets/img/Rick_and_Morty.svg">
 </head>
 <body>
-
+  <div 
+  class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]">
   <app-root></app-root>
+  </div>
+  
 </body>
 </html>
